# ROS-turtlebot3-project

./: README.md  turtlebot3_project_concept.excalidraw
img/: commands.excalidraw
src/maze_escape/: CMakeLists.txt  package.xml
src/maze_escape/launch/: maze_escape.launch  midterm_map.launch  testmaze_map.launch
src/maze_escape/src/: maze_escape.py
src/object_color_detection_ros_opencv-master/: CMakeLists.txt
src/object_color_detection_ros_opencv-master/src/: detect_color.cpp  detect_color.h
src/turtlebot3/turtlebot3_example/: CMakeLists.txt
src/turtlebot3/turtlebot3_example/launch/: turtlebot3_obstacle_direction.launch
src/turtlebot3/turtlebot3_example/nodes/: turtlebot3_obstacle  turtlebot3_obstacle_direction
src/turtlebot3/turtlebot3_navigation/param/: costmap_common_params_waffle_pi (넓은길).yaml  costmap_common_params_waffle_pi (좁은길).yaml  costmap_common_params_waffle_pi.yaml
src/turtlebot3_manipulation/turtlebot3_manipulation_gui/include/turtlebot3_manipulation_gui/: main_window.hpp  qnode.hpp
src/turtlebot3_manipulation/turtlebot3_manipulation_gui/src/: main.cpp  main_window.cpp  qnode.cpp
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: case_of_sphere.launch  my_aisle_final.launch  turtlebot3_sphere.launch
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_square/: model.sdf
