<?xml version="1.0"?>
<package format="2">
  <name>maze_escape</name>
  <version>0.0.0</version>
  <description>This package conducts a maze escaping for turtlebot3 using lidar sensor. </description>

  <maintainer email="sbeen1840@naver.com">sbeen1840</maintainer>

  <license>TODO</license>
  <url type="website">https://github.com/sbeen1840/maze-escape.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
